--- a/Exercise Session 1/exercise_session_1.ipynb
+++ b/Exercise Session 1/exercise_session_1.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2a530acd2b0>"
+       "<matplotlib.image.AxesImage at 0x15be500c2e8>"
       ]
      },
      "execution_count": 2,
@@ -196,7 +196,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2a5320ae5c0>"
+       "<matplotlib.image.AxesImage at 0x15be65fd5c0>"
       ]
      },
      "execution_count": 6,
@@ -279,7 +279,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2a532b273c8>"
+       "<matplotlib.image.AxesImage at 0x15be7079320>"
       ]
      },
      "execution_count": 9,
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
        "Text(0.5, 1.0, 'Street 2')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,16 +449,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2155d230a20>"
+       "<matplotlib.image.AxesImage at 0x15be6c2a898>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {
     "scrolled": false
    },
@@ -510,7 +510,7 @@
        "Text(0.5, 1.0, 'Background model')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -670,16 +670,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2a53597dda0>"
+       "<matplotlib.image.AxesImage at 0x15be81920f0>"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -726,7 +726,7 @@
        "Text(0.5, 1.0, 'Blue')"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -768,16 +768,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2a540439eb8>"
+       "<matplotlib.image.AxesImage at 0x15be73a2390>"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -809,16 +809,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2a5401c50b8>"
+       "<matplotlib.image.AxesImage at 0x15be6ed1470>"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -869,16 +869,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2a540252be0>"
+       "<matplotlib.image.AxesImage at 0x15be6ed7828>"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
